fix (MWPW-140546): fixes third line cutoff on chinese pages

--- a/less/components/consonant/cards/card.less
+++ b/less/components/consonant/cards/card.less
@@ -55,7 +55,6 @@
     }
 
     &-label + &-title + p {
-        max-height: 1rem * 3;
         line-height: 1rem;
     }
 
